feat: product review (#39)
* feat: add product data

* fix: stupid errors

* feat: product review

* commit

* chore: convert image to jpeg format

* feat: add seeders

* chore: update docs
